--- a/src/Project1/Project1/ClientApp/src/app/show-orders/show-orders.component.html
+++ b/src/Project1/Project1/ClientApp/src/app/show-orders/show-orders.component.html
@@ -227,26 +227,12 @@
       <tr>
 
         <td colspan="2">
-          <strong>OBSERVATII:</strong>  SOFERII SA SE PREZINTE ATAT LA LOCUL DE INCARCARE CAT SI LA LOCUL DE DESCARCARE, CA FIIND DIN PARTEA TRANSPED RC-RAC SRL!!!
+          <strong>OBSERVATII:</strong>  SOFERII SA SE PREZINTE ATAT LA LOCUL DE INCARCARE CAT SI LA LOCUL DE DESCARCARE, CA FIIND DIN PARTEA "NUMELE FIRMEI SRL"!!!
         </td>
 
       </tr>
     </table>
 
-    <pre style="font-size: 10.5px; text-align: left">
-
-    In cazul transporturilor in regim exclusiv, se interzice în mod expres incarcarea a orice altceva (marfa,
- persoane etc) in afara marfii menntionate de noi, in caz contrar transportatorul va suporta daunele cerute de
- catre firma noastra si/ sau proprietarul marfii pentru care am efectuat aceasta comanda de transport.
-
-    In situatia in care masina se sigileaza la incarcare, transportatorul are obligatia de a ajunge cu sigiliul
- intact la descarcare, in caz contrar va suporta toate daunele survenite in urma ruperii acestuia, cu exceptia
- cazului în care sigiliul este desfacut de catre organele in drept (caz in care este necesara stampilarea CMR-ului
- de catre organele in drept). 
-
-    Pretul include toate elementele de cheltuiala: asigurarea marfii, taxele de autostrada, taxele vamale,
- taxe si comisioane bancare etc.
-</pre>
 
   </div>
 
@@ -268,7 +254,7 @@
                type="number"
                [(ngModel)]="orderNumberEdit"
                value="{{orderNumberEdit}}"
-               disabled 
+               disabled
                formControlName="orderNumberEdit"
                />
         <mat-hint align="end">You can use only numbers</mat-hint>
